# SoDaSignals

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  SoDaSignalsConfig.cmake  SoDaSignalsConfigVersion.cmake.in  version.h.in
charliecloud/Fedora40/: Dockerfile  build.sh
charliecloud/Ubuntu/: Dockerfile  build.sh
cmake/: BuildPackage.cmake
cmake/Modules/: BuildSoDaUtils.cmake  CMakeLists.txt  FetchSoDaUtils.cmake  FindFFTW3.cmake  FindFFTW3F.cmake  FindFFTW3f.cmake
example/: CMakeLists.txt  FFTExample.cxx  FFTTiming.cxx  FIRFilterTest.cxx  FilterExample.cxx  FilterTest.cxx  ReSamplerTest.cxx
examples/: CMakeLists.txt  FFTExample.cxx  FFTTiming.cxx  FilterExample.cxx  FilterTest.cxx  doTiming.sh
include/: BlockOp.hxx  CMakeLists.txt  ChebyshevWindow.hxx  CircularBuffer.hxx  FFT.hxx  FIRFilter.hxx  Filter.hxx  FilterSpec.hxx  FilterType.hxx  Hilbert.hxx  NCO.hxx  OSFilter.hxx  Periodogram.hxx  ReSampler.hxx  Signals.hxx  Utilities.hxx  Windows.hxx
src/: CMakeLists.txt  ChebyshevWindow.cxx  ChebyshevWindow.hxx  FFT.cxx  FFT.hxx  Filter.cxx  Filter.hxx  FilterSpec.cxx  Hilbert.cxx  NCO.cxx  OSFilter.cxx  Periodogram.cxx  ReSampler.cxx  Signals.hxx  SoDaSignals.i  Windows.cxx
test/: CMakeLists.txt  Checker.cxx  Checker.hxx  CircularBufferTest.cxx  FFTFilterTest.cxx  FFTTest.cxx  FFTTiming.cxx  FFT_Timing.cxx  FFT_Timing2.cxx  FIRFilterTest.cxx  FilterTest.cxx  HilbertTest.cxx  NCOTest.cxx  OSFilterTest.cxx  PeriodogramTest.cxx  ReSamplerNoise.cxx  ReSamplerSweep.cxx  ReSamplerTest.cxx  bsf_test.cxx
