set(SIGNALS_SRCS
	FFT.cxx
	ChebyshevWindow.cxx
	)


FIND_PACKAGE(FFTW3 REQUIRED)
FIND_PACKAGE(FFTW3f REQUIRED)

set(DEP_LIBS ${FFTW3_LIBRARIES})
list(APPEND DEP_LIBS ${FFTW3F_LIBRARIES})

set(DEP_INCLS ${FFTW3_INCLUDE_DIRS})

message("DEP_INCLS = ${DEP_INCLS}")
message("DEP_LIBS = ${DEP_LIBS}")

set(SIGLIBS
  ${FFTW3_LIBRARY_DIRS}
  ${FFTW3f_LIBRARY_DIRS})

add_library(sodasignals SHARED ${SIGNALS_SRCS})
target_include_directories(sodasignals PUBLIC ${DEP_INCLS})
target_link_libraries(sodasignals ${DEP_LIBS})
target_link_directories(sodasignals PUBLIC ${FFTW3_LIBRARY_DIRS} ${FFTW3f_LIBRARY_DIRS})
install(TARGETS sodasignals DESTINATION lib)


# Build python SWIG interface
FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${DEP_INCLS})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(SoDaSignals.i PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(SoDaSignals.i PROPERTIES SWIG_FLAGS "-includeall")
#SWIG_ADD_MODULE(SoDaSignals python SoDaSignals.i FFT.cxx)
SWIG_ADD_LIBRARY(SoDaSignalsPy
  LANGUAGE python 
  SOURCES SoDaSignals.i FFT.cxx)
SWIG_LINK_LIBRARIES(SoDaSignalsPy ${PYTHON_LIBRARIES}  ${DEP_LIBS})
#SET_PROPERTY(TARGET SoDaSignalsPy PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE)


